src/qt/libqobject.bf

	
	public libqt_string[] DynamicPropertyNames()
	{
		return this.handle.DynamicPropertyNames();
	}
	
	public void* BindingStorage()
	{
		return this.handle.BindingStorage();
	}
	
	public void* BindingStorage2()
	{
		return this.handle.BindingStorage2();
	}
	
	public void* Parent()
	{
		return this.handle.Parent();
	}
	
	public bool Inherits(char8* classname)
	{
		return this.handle.Inherits(classname);
	}
	
	public void DeleteLater()
	{
		this.handle.DeleteLater();
	}
	
	public void* Sender()
	{
		return this.handle.Sender();
	}
	
	public int32 SenderSignalIndex()
	{
		return this.handle.SenderSignalIndex();
	}
	
	public int32 Receivers(char8* signal)
	{
		return this.handle.Receivers(signal);
	}
	
	public bool IsSignalConnected(IQMetaMethod signal)
	{
		return this.handle.IsSignalConnected(signal);
	}
	
	public virtual void TimerEvent(IQTimerEvent event)
	{
		this.handle.TimerEvent(event);
	}
	
	public virtual void ChildEvent(IQChildEvent event)
	{
		this.handle.ChildEvent(event);
	}
	
	public virtual void CustomEvent(IQEvent event)
	{
		this.handle.CustomEvent(event);
	}
	
	public virtual void ConnectNotify(IQMetaMethod signal)
	{
		this.handle.ConnectNotify(signal);
	}
	
	public virtual void DisconnectNotify(IQMetaMethod signal)
	{
		this.handle.DisconnectNotify(signal);
	}
	
	public static libqt_string Tr2(char8* s, char8* c)
	{
		return QObjectPtr.Tr2(s, c);
	}
	
	public static libqt_string Tr3(char8* s, char8* c, int32 n)
	{
		return QObjectPtr.Tr3(s, c, n);
	}
	
	public int32 StartTimer2(int32 interval, int64 timerType)
	{
		return this.handle.StartTimer2(interval, timerType);
	}
	
	public static void Connect5(IQObject sender, IQMetaMethod signal, IQObject receiver, IQMetaMethod method, int64 typeVal)
	{
		QObjectPtr.Connect5(sender, signal, receiver, method, typeVal);
	}
	
	public void Connect4(IQObject sender, char8* signal, char8* member, int64 typeVal)
	{
		this.handle.Connect4(sender, signal, member, typeVal);
	}
	
}
extension CQt
{
	[LinkName("QObject_new")]
	public static extern void* QObject_new();
	[LinkName("QObject_new2")]
	public static extern void* QObject_new2(void* parent);
	[LinkName("QObject_MetaObject")]
	public static extern void* QObject_MetaObject(void* c_this);
	[LinkName("QObject_Metacast")]
	public static extern void* QObject_Metacast(void* c_this, char8* param1);
	[LinkName("QObject_Metacall")]
	public static extern int32 QObject_Metacall(void* c_this, int64 param1, int32 param2, void* param3);
	[LinkName("QObject_Tr")]
	public static extern libqt_string QObject_Tr(char8* s);
	[LinkName("QObject_Event")]
	public static extern bool QObject_Event(void* c_this, void* event);
	[LinkName("QObject_EventFilter")]
	public static extern bool QObject_EventFilter(void* c_this, void* watched, void* event);
	[LinkName("QObject_ObjectName")]
	public static extern libqt_string QObject_ObjectName(void* c_this);
	[LinkName("QObject_SetObjectName")]
	public static extern void QObject_SetObjectName(void* c_this, char8* name);
	[LinkName("QObject_IsWidgetType")]
	public static extern bool QObject_IsWidgetType(void* c_this);
	[LinkName("QObject_IsWindowType")]
	public static extern bool QObject_IsWindowType(void* c_this);
	[LinkName("QObject_IsQuickItemType")]
	public static extern bool QObject_IsQuickItemType(void* c_this);
	[LinkName("QObject_SignalsBlocked")]
	public static extern bool QObject_SignalsBlocked(void* c_this);
	[LinkName("QObject_BlockSignals")]
	public static extern bool QObject_BlockSignals(void* c_this, bool b);
	[LinkName("QObject_Thread")]
	public static extern void* QObject_Thread(void* c_this);
	[LinkName("QObject_MoveToThread")]
	public static extern void QObject_MoveToThread(void* c_this, void* thread);
	[LinkName("QObject_StartTimer")]
	public static extern int32 QObject_StartTimer(void* c_this, int32 interval);
	[LinkName("QObject_KillTimer")]
	public static extern void QObject_KillTimer(void* c_this, int32 id);
	[LinkName("QObject_Children")]
	public static extern void*[] QObject_Children(void* c_this);
	[LinkName("QObject_SetParent")]
	public static extern void QObject_SetParent(void* c_this, void* parent);
	[LinkName("QObject_InstallEventFilter")]
	public static extern void QObject_InstallEventFilter(void* c_this, void* filterObj);
	[LinkName("QObject_RemoveEventFilter")]
	public static extern void QObject_RemoveEventFilter(void* c_this, void* obj);
	[LinkName("QObject_Connect")]
	public static extern void QObject_Connect(void* sender, void* signal, void* receiver, void* method);
	[LinkName("QObject_Connect2")]
	public static extern void QObject_Connect2(void* c_this, void* sender, char8* signal, char8* member);
	[LinkName("QObject_Disconnect")]
	public static extern bool QObject_Disconnect(void* sender, void* signal, void* receiver, void* member);
	[LinkName("QObject_DisconnectWithQMetaObjectConnection")]
	public static extern bool QObject_DisconnectWithQMetaObjectConnection(void* param1);
	[LinkName("QObject_DumpObjectTree")]
	public static extern void QObject_DumpObjectTree(void* c_this);
	[LinkName("QObject_DumpObjectInfo")]
	public static extern void QObject_DumpObjectInfo(void* c_this);
	[LinkName("QObject_SetProperty")]
	public static extern bool QObject_SetProperty(void* c_this, char8* name, void* value);
	[LinkName("QObject_Property")]
	public static extern void QObject_Property(void* c_this, char8* name);
	[LinkName("QObject_DynamicPropertyNames")]
	public static extern libqt_string[] QObject_DynamicPropertyNames(void* c_this);
	[LinkName("QObject_BindingStorage")]
	public static extern void* QObject_BindingStorage(void* c_this);
	[LinkName("QObject_BindingStorage2")]
	public static extern void* QObject_BindingStorage2(void* c_this);
	[LinkName("QObject_Connect_Destroyed")]
	public static extern void QObject_Connect_Destroyed(void* c_this, c_intptr slot);
	[LinkName("QObject_Parent")]
	public static extern void* QObject_Parent(void* c_this);
	[LinkName("QObject_Inherits")]
	public static extern bool QObject_Inherits(void* c_this, char8* classname);
	[LinkName("QObject_DeleteLater")]
	public static extern void QObject_DeleteLater(void* c_this);
	[LinkName("QObject_Sender")]
	public static extern void* QObject_Sender(void* c_this);
	[LinkName("QObject_SenderSignalIndex")]
	public static extern int32 QObject_SenderSignalIndex(void* c_this);
	[LinkName("QObject_Receivers")]
	public static extern int32 QObject_Receivers(void* c_this, char8* signal);
	[LinkName("QObject_IsSignalConnected")]
	public static extern bool QObject_IsSignalConnected(void* c_this, void* signal);
	[LinkName("QObject_TimerEvent")]
	public static extern void QObject_TimerEvent(void* c_this, void* event);
	[LinkName("QObject_ChildEvent")]
	public static extern void QObject_ChildEvent(void* c_this, void* event);
	[LinkName("QObject_CustomEvent")]
	public static extern void QObject_CustomEvent(void* c_this, void* event);
	[LinkName("QObject_ConnectNotify")]
	public static extern void QObject_ConnectNotify(void* c_this, void* signal);
	[LinkName("QObject_DisconnectNotify")]
	public static extern void QObject_DisconnectNotify(void* c_this, void* signal);
	[LinkName("QObject_Tr2")]
	public static extern libqt_string QObject_Tr2(char8* s, char8* c);
	[LinkName("QObject_Tr3")]
	public static extern libqt_string QObject_Tr3(char8* s, char8* c, int32 n);
	[LinkName("QObject_StartTimer2")]
	public static extern int32 QObject_StartTimer2(void* c_this, int32 interval, int64 timerType);
	[LinkName("QObject_Connect5")]
	public static extern void QObject_Connect5(void* sender, void* signal, void* receiver, void* method, int64 typeVal);
	[LinkName("QObject_Connect4")]
	public static extern void QObject_Connect4(void* c_this, void* sender, char8* signal, char8* member, int64 typeVal);
	[LinkName("QObject_Connect_Destroyed1")]
	public static extern void QObject_Connect_Destroyed1(void* c_this, c_intptr slot);
	/// Delete this object from C++ memory
	[LinkName("QObject_Delete")]
	public static extern void QObject_Delete(void* self);
}
public interface IQSignalBlocker
{
	void* NativePtr { get; }
}
public struct QSignalBlockerPtr : IQSignalBlocker, IDisposable
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(void* ptr)
	{
		this.nativePtr = ptr;
	}
	
	public static Self New(IQObject o)
	{
		return .(CQt.QSignalBlocker_new((o == default || o.NativePtr == default) ? default : o.NativePtr));
	}
	
	public void Dispose()
	{
		CQt.QSignalBlocker_Delete(this.nativePtr);
	}
	
	public void Reblock()
	{
		CQt.QSignalBlocker_Reblock(this.nativePtr);
	}
	
	public void Unblock()
	{
		CQt.QSignalBlocker_Unblock(this.nativePtr);
	}
	
}
public class QSignalBlocker
{
	public QSignalBlockerPtr handle;
	
	public static implicit operator QSignalBlockerPtr(Self self)
	{
		return self.handle;
	}
	
	public this(IQObject o)
	{
		this.handle = QSignalBlockerPtr.New(o);
	}
	
	public ~this()
	{
		this.handle.Dispose();
	}
	
	public void Reblock()
	{
		this.handle.Reblock();
	}
	
	public void Unblock()
	{
		this.handle.Unblock();
	}
	
}
extension CQt
{
	[LinkName("QSignalBlocker_new")]
	public static extern void* QSignalBlocker_new(void* o);
	[LinkName("QSignalBlocker_new2")]
	public static extern void* QSignalBlocker_new2(void* o);
	[LinkName("QSignalBlocker_Reblock")]
	public static extern void QSignalBlocker_Reblock(void* c_this);
	[LinkName("QSignalBlocker_Unblock")]
	public static extern void QSignalBlocker_Unblock(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QSignalBlocker_Delete")]
	public static extern void QSignalBlocker_Delete(void* self);
}